// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<styled.span>
  <Sidebar.Title
    className=""
    inHeader={false}
    key=".0"
  >
    <div />
  </Sidebar.Title>
</styled.span>
`;

exports[`When using snapshots Should render with className and other props 1`] = `
<styled.span>
  <Sidebar.Title
    className="my-class"
    inHeader={false}
    key=".0"
    oneProp={1}
    twoProp={2}
  >
    <div />
  </Sidebar.Title>
</styled.span>
`;

exports[`When using snapshots Should render with other props 1`] = `
<styled.span>
  <Sidebar.Title
    className=""
    inHeader={false}
    key=".0"
    oneProp={1}
    twoProp={2}
  >
    <div />
  </Sidebar.Title>
</styled.span>
`;

exports[`When using snapshots Should render with the className prop 1`] = `
<styled.span>
  <Sidebar.Title
    className="my-class"
    inHeader={false}
    key=".0"
  >
    <div />
  </Sidebar.Title>
</styled.span>
`;
